<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Top Bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#002776"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/config_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/gear40031"
            app:tint="#FFFFFF"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/config_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="23dp"
            android:text="@string/configura_o"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/brazil_flag"
            android:layout_width="62dp"
            android:layout_height="32dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_brazil_flag" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Scroll View -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Tamanho das Letras -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tamanho_das_letras"
                    android:textSize="16sp"
                    android:textColor="#000000" />

                <SeekBar
                    android:id="@+id/font_size_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="20"
                    android:progress="12"
                    android:layout_marginTop="8dp"
                    android:thumb="@drawable/custom_thumb"
                    android:progressDrawable="@drawable/custom_progress"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" />


                <TextView
                    android:id="@+id/font_ex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/aa"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <!-- Ativar Notificações -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ativar_notifica_es"
                        android:textSize="16sp"
                        android:textColor="#000000" />

                    <Switch
                        android:id="@+id/notifications_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="@dimen/cardview_default_elevation" />
                </LinearLayout>

                <!-- Tema Escuro -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tema_escuro"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <Switch
                        android:id="@+id/dark_mode_switch"
                        android:layout_width="62dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginStart="3dp"
                        android:enabled="false" />
                </LinearLayout>

                <!-- Reportar Erro -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reportar_erro"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/report_error_input"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@android:color/darker_gray"
                    android:hint="@string/descreva_o_problema"
                    android:padding="8dp"
                    android:layout_marginTop="8dp" />

                <!-- Botão Enviar -->
                <Button
                    android:id="@+id/submit_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/enviar"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#0069C0"
                    android:layout_marginTop="16dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save_conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="#0C66E4"
                    android:padding="10dp"
                    android:text="Salvar"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:cornerRadius="15dp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottombar"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:alpha="0.5"
            android:src="@drawable/ic_arrow_return" />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="32dp"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:src="@drawable/ic_settings" />

        <ImageView
            android:id="@+id/logout_icon"
            android:layout_width="49dp"
            android:layout_height="39dp"
            android:alpha="0.5"
            android:src="@drawable/ic_logout" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>